--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Campus Oja</title>
+    <title>Afrikal</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/ionicons.min.css">
@@ -16,7 +16,7 @@
         <nav class="white">
             <div class="nav-wrapper container">
                 <a href="index.html" class="brand-logo left">
-                    <i class="left ion ion-ios-cart"></i> Campus Oja
+                    <i class="left ion ion-ios-cart"></i> Afrikal
                 </a>
                 <ul class="right">
                     <li><a href="#" class="" id="openSearch"><i class="right ion ion-ios-search"></i></a></li>
