--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         <nav class="white">
             <div class="nav-wrapper container">
                 <a href="index.html" class="brand-logo left">
-                    <i class="left ion ion-ios-cart"></i> Afrikal
+                    <i class="left ion ion-arrow-shrink"></i> Afrikal
                 </a>
                 <ul class="right">
                     <li><a href="#" class="" id="openSearch"><i class="right ion ion-ios-search"></i></a></li>
                     <li><a href="#" class="hide-on-small-only">Help &amp; Support</a></li>
-                    <li><a href="#" class="btn waves-effect waves-light purple hide-on-small-only">Sell Something</a></li>
+                    <li><a href="#" class="btn waves-effect waves-light teal hide-on-small-only">Get job done</a></li>
+                    <li><a href="#" class="btn waves-effect waves-light purple hide-on-small-only">Make money</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,12 +40,22 @@
     </div>
     <section id="banner" class="center-align">
         <div class="overlay white-text">
-            <h2>Welcome to Campus Oja!</h2>
-            <h4 class="slogan">Come
-                <u>Buy</u>, Come
-                <u>Sell</u>
-            </h4>
+            <h3>Get anything done or Make Money</h3>
+            <h5 class="slogan">
+                Get premium services at affordable prices
+            </h5>
+            <p class="flow-text">Search. Pick. Done. </p>
             <br>
+            <div class="row">
+                <form class="col l4 offset-l3">
+                    <div class="row">
+                        <div class="input-field col s12 white">
+                            <input id="password" type="password" class="validate">
+                            <label for="password">Password</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
             <br>
             <br>
             <div class="row">
