added more to the categories

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="hide" id="searchField">
+        <div class="hide animated" id="searchField">
             <div class="header">
                 <!--<p class="flow-text white-text left">Search</p>-->
                 <a href="#" class="btn-floating btn-large waves-effect waves-light transparent right" id="searchClose">
@@ -35,7 +35,6 @@
                 </a>
             </div>
             <div class="inner">
-
                 <form id="searchBox" onsubmit="alert('search not yet available'); return false;">
                     <input type="search" id="searcharea" placeholder="Search services" autofocus autocomplete="false">
                 </form>
@@ -84,8 +83,105 @@
             <button class="btn-large teal waves-effect waves-light" id="findServices">Find Services</button>
         </div>
     </section>
-
-
+    <section id="categories" class="row">
+        <div class="">
+            <header>
+                <h4 class="center">
+                    POPULAR CATEGORIES
+                    <br>
+                    <small>Choose from our most popular services</small>
+                </h4>
+            </header>
+            <section id="categories_on_home">
+                <div class="row">
+                    <div class="col s12 m6 l8">
+                        <p class="flow-text category_head green-text text-darken-2 center">
+                            <i class="icon ion-ios-lightbulb"></i> ONLINE SERVICES</p>
+                        <div class="row">
+                            <div class="col s12 m12 l6">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Graphic Design </a>
+                                        <br>
+                                        <small>Everything graphics, from Design to Picture editing </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/header0.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s12 m12 l6">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Web Design </a>
+                                        <br>
+                                        <small> Give your bussiness and online presence using a website </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/img1.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s12 m12 l6">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Graphic Design </a>
+                                        <br>
+                                        <small>Everything graphics, from Design to Picture editing </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/img1.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s12 m12 l6">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Graphic Design </a>
+                                        <br>
+                                        <small>Everything graphics, from Design to Picture editing </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/img1.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6 l4">
+                        <p class="flow-text category_head pink-text center">
+                            <i class="icon ion-ios-lightbulb"></i> OFFLINE SERVICES</p>
+                        <div class="row">
+                            <div class="col s12 m12 l12">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Graphic Design </a>
+                                        <br>
+                                        <small>Everything graphics, from Design to Picture editing </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/img1.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s12 m12 l12">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Graphic Design </a>
+                                        <br>
+                                        <small>Everything graphics, from Design to Picture editing </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/img1.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/app.js"></script>
