still in cat section

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <button class="btn-large teal waves-effect waves-light" id="findServices">Find Services</button>
         </div>
     </section>
-    <section id="categories" class="row">
-        <div class="">
+    <section id="categories" class="row grey lighten-5">
+        <div class="container">
             <header>
                 <h4 class="center">
                     POPULAR CATEGORIES
@@ -95,15 +95,39 @@
             <section id="categories_on_home">
                 <div class="row">
                     <div class="col s12 m6 l8">
-                        <p class="flow-text category_head green-text text-darken-2 center">
-                            <i class="icon ion-ios-lightbulb"></i> ONLINE SERVICES</p>
+                        <!--<p class="flow-text category_head white-text text-darken-2 green darken-3 center">
+                            <i class="icon ion-ios-lightbulb"></i> ONLINE SERVICES</p>-->
                         <div class="row">
+                            <div class="col s12 m12 l6">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Web Design </a>
+                                        <br>
+                                        <small>Get  your bussiness online with a website </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/img5.jpg">
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col s12 m12 l6">
                                 <div class="card">
                                     <div class="card-action">
                                         <a href="#"> Graphic Design </a>
                                         <br>
                                         <small>Everything graphics, from Design to Picture editing </small>
+                                    </div>
+                                    <div class="card-image">
+                                        <img src="images/img1.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col s12 m12 l6">
+                                <div class="card">
+                                    <div class="card-action">
+                                        <a href="#"> Graphic Design </a>
+                                        <br>
+                                        <small> Creation, Design and editing of graphics </small>
                                     </div>
                                     <div class="card-image">
                                         <img src="images/header0.jpg">
@@ -113,54 +137,30 @@
                             <div class="col s12 m12 l6">
                                 <div class="card">
                                     <div class="card-action">
-                                        <a href="#"> Web Design </a>
+                                        <a href="#"> Content Writing </a>
                                         <br>
-                                        <small> Give your bussiness and online presence using a website </small>
+                                        <small> Articles, stories and web contents</small>
                                     </div>
                                     <div class="card-image">
-                                        <img src="images/img1.jpg">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 m12 l6">
-                                <div class="card">
-                                    <div class="card-action">
-                                        <a href="#"> Graphic Design </a>
-                                        <br>
-                                        <small>Everything graphics, from Design to Picture editing </small>
-                                    </div>
-                                    <div class="card-image">
-                                        <img src="images/img1.jpg">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 m12 l6">
-                                <div class="card">
-                                    <div class="card-action">
-                                        <a href="#"> Graphic Design </a>
-                                        <br>
-                                        <small>Everything graphics, from Design to Picture editing </small>
-                                    </div>
-                                    <div class="card-image">
-                                        <img src="images/img1.jpg">
+                                        <img src="images/writing.jpg">
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col s12 m6 l4">
-                        <p class="flow-text category_head pink-text center">
-                            <i class="icon ion-ios-lightbulb"></i> OFFLINE SERVICES</p>
+                        <!--<p class="flow-text category_head brown darken-4 white-text center">
+                            <i class="icon ion-ios-lightbulb"></i> OFFLINE SERVICES</p>-->
                         <div class="row">
                             <div class="col s12 m12 l12">
                                 <div class="card">
                                     <div class="card-action">
-                                        <a href="#"> Graphic Design </a>
+                                        <a href="#"> Photography </a>
                                         <br>
-                                        <small>Everything graphics, from Design to Picture editing </small>
+                                        <small> Perfect memories for weddings and other events</small>
                                     </div>
                                     <div class="card-image">
-                                        <img src="images/img1.jpg">
+                                        <img src="images/photography.jpg">
                                     </div>
                                 </div>
                             </div>
