--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
             </h5>
             <p class="flow-text">Search. Pick. Done. </p>
             <button class="btn-large teal waves-effect waves-light" id="findServices">Find Services</button>
+            <div class="row white">
+                <div class="col s6 m6 l6 left-align">
+                    <h2>Online Services</h2>
+                    <p class="flow-text">Get digital services offered by professionals online</p>
+                </div>
+            </div>
         </div>
     </section>
     <section id="categories" class="row grey lighten-5">
@@ -89,66 +95,54 @@
                 <h4 class="center">
                     POPULAR CATEGORIES
                     <br>
-                    <small>Choose from our most popular services</small>
+                    <small>Our popular online and offline services</small>
                 </h4>
             </header>
             <section id="categories_on_home">
                 <div class="row">
-                    <div class="col s12 m6 l8">
+                    <div class="col s12 m6 l9">
                         <!--<p class="flow-text category_head white-text text-darken-2 green darken-3 center">
                             <i class="icon ion-ios-lightbulb"></i> ONLINE SERVICES</p>-->
                         <div class="row">
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l4">
                                 <div class="card">
                                     <div class="card-action">
                                         <a href="#"> Web Design </a>
                                         <br>
-                                        <small>Get  your bussiness online with a website </small>
+                                        <small>Give your bussiness an online presence with a website </small>
                                     </div>
                                     <div class="card-image">
                                         <img src="images/img5.jpg">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l4">
                                 <div class="card">
                                     <div class="card-action">
-                                        <a href="#"> Graphic Design </a>
+                                        <a href="#"> Software Development </a>
                                         <br>
-                                        <small>Everything graphics, from Design to Picture editing </small>
+                                        <small>Need a software  for bussiness, personal use or enterprise solution</small>
                                     </div>
                                     <div class="card-image">
                                         <img src="images/img1.jpg">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col s12 m12 l6">
+                            <div class="col s12 m12 l4">
                                 <div class="card">
                                     <div class="card-action">
                                         <a href="#"> Graphic Design </a>
                                         <br>
-                                        <small> Creation, Design and editing of graphics </small>
+                                        <small> Everything graphics, from Design to Picture editing </small>
                                     </div>
                                     <div class="card-image">
                                         <img src="images/header0.jpg">
                                     </div>
                                 </div>
                             </div>
-                            <div class="col s12 m12 l6">
-                                <div class="card">
-                                    <div class="card-action">
-                                        <a href="#"> Content Writing </a>
-                                        <br>
-                                        <small> Articles, stories and web contents</small>
-                                    </div>
-                                    <div class="card-image">
-                                        <img src="images/writing.jpg">
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
-                    <div class="col s12 m6 l4">
+                    <div class="col s12 m6 l3">
                         <!--<p class="flow-text category_head brown darken-4 white-text center">
                             <i class="icon ion-ios-lightbulb"></i> OFFLINE SERVICES</p>-->
                         <div class="row">
@@ -161,18 +155,6 @@
                                     </div>
                                     <div class="card-image">
                                         <img src="images/photography.jpg">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 m12 l12">
-                                <div class="card">
-                                    <div class="card-action">
-                                        <a href="#"> Graphic Design </a>
-                                        <br>
-                                        <small>Everything graphics, from Design to Picture editing </small>
-                                    </div>
-                                    <div class="card-image">
-                                        <img src="images/img1.jpg">
                                     </div>
                                 </div>
                             </div>
