adding friks(a service unit on afrikal)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="hide animated" id="searchField">
+        <div class="hide animated fadeOutUp" id="searchField">
             <div class="header">
                 <!--<p class="flow-text white-text left">Search</p>-->
                 <a href="#" class="btn-floating btn-large waves-effect waves-light transparent right" id="searchClose">
@@ -81,10 +81,28 @@
             </h5>
             <p class="flow-text">Search. Pick. Done. </p>
             <button class="btn-large teal waves-effect waves-light" id="findServices">Find Services</button>
-            <div class="row white">
-                <div class="col s6 m6 l6 left-align">
-                    <h2>Online Services</h2>
-                    <p class="flow-text">Get digital services offered by professionals online</p>
+            <div class="row">
+                <div class="col s6 m6 l4 left-align desc1 row">
+                    <div class="col l3">
+                        <h1 class="right-align">
+                            <i class="icon ion-earth"></i>
+                        </h1>
+                    </div>
+                    <div class="col l9">
+                        <h4>Digital Services</h4>
+                        <p class="flow-text">Get digital services offered by <br> professionals online</p>
+                    </div>
+                </div>
+                <div class="col s6 m6 l4 offset-l4 right left-align desc1 row">
+                    <div class="col l3">
+                        <h1 class="right-align">
+                            <i class="icon ion-settings"></i>
+                        </h1>
+                    </div>
+                    <div class="col l9">
+                        <h4>Non-Digital Services</h4>
+                        <p class="flow-text"> Think of any service that can be rendered without a PC</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -95,7 +113,7 @@
                 <h4 class="center">
                     POPULAR CATEGORIES
                     <br>
-                    <small>Our popular online and offline services</small>
+                    <small>Most patronised Online &amp; Offline services on Afrikal</small>
                 </h4>
             </header>
             <section id="categories_on_home">
@@ -162,6 +180,42 @@
                     </div>
                 </div>
             </section>
+        </div>
+        <div class="divider"></div>
+        <div class="container">
+            <header>
+                <h4 class="center">
+                    FEATURED FRIKS
+                    <br>
+                    <small>Best friks on Afrikal</small>
+                </h4>
+            </header>
+            <div class="row">
+                <div class="col eq5 frik">
+                    <div class="card">
+                        <div class="card-action">
+                            <a href="#"> Web Design </a>
+                            <br>
+                            <small>Give your bussiness an online presence with a website </small>
+                        </div>
+                        <div class="card-image">
+                            <img src="images/img5.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="col eq5 yellow">
+                    hello
+                </div>
+                <div class="col eq5 green">
+                    hello
+                </div>
+                <div class="col eq5 yellow">
+                    hello
+                </div>
+                <div class="col eq5 purple">
+                    hello
+                </div>
+            </div>
         </div>
     </section>
     <script src="js/jquery.min.js"></script>
