added blog section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </div>
     </section>
-    <section id="categories" class="row grey lighten-5">
+    <main id="categories" class="row grey lighten-5">
         <div class="container">
             <header>
                 <h4 class="center">
@@ -493,8 +493,77 @@
                     <small>Afrikal's News &amp; Update</small>
                 </h4>
             </header>
+            <div class="row">
+                <div class="col s12 l6">
+                    <div class="blogPost_on_home">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="images/header.jpg">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title">
+                                    How I gained financial freedom through Afrikal
+                                    <br>
+                                    <small class="grey-text">Segun Ajayi, Web Animator</small>
+                                </span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sequi labore vitae in vel ea natus numquam dolores quidem
+                                    itaque odio autem nihil, cupiditate reprehenderit possimus ipsa, consequuntur aliquid
+                                    nesciunt
+                                </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#" class="brown-text text-darken-3">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l6">
+                    <div class="blogPost_on_home">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="images/header.jpg">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title">
+                                    How I gained financial freedom through Afrikal
+                                    <br>
+                                    <small class="grey-text">Segun Ajayi, Web Animator</small>
+                                </span>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sequi labore vitae in vel ea natus numquam dolores quidem
+                                    itaque odio autem nihil, cupiditate reprehenderit possimus ipsa, consequuntur aliquid
+                                    nesciunt
+                                </p>
+                            </div>
+                            <div class="card-action">
+                                <a href="#" class="brown-text text-darken-3">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
+        <div class="divider"></div>
+        <div class="container" id="frikIdeas">
+            <header>
+                <h4 class="center">
+                    <i class="icon ion-ios-glasses"></i> Frik Ideas
+                    <i class="icon ion-ios-glasses"></i>
+                    <br>
+                    <small>Cool Frik Ideas for buyers and sellers</small>
+                </h4>
+                <div class="row">
+                    <div class="col s12 m4 l3">
+                        <div class="card-panel teal">
+                            <span class="white-text">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </div>
+    </main>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/app.js"></script>
