--- a/index.html
+++ b/index.html
@@ -553,15 +553,97 @@
                     <br>
                     <small>Cool Frik Ideas for buyers and sellers</small>
                 </h4>
-                <div class="row">
-                    <div class="col s12 m4 l3">
-                        <div class="card-panel teal">
-                            <span class="white-text">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-                            </span>
+            </header>
+            <div class="row">
+                <div class="col s12 m4 l4">
+                    <div class="demo_chat_box card">
+                        <header class="purple white-text">
+                            <i class="icon ion-chatbubbles"></i>
+                            <span class="white-text">Afrikal Chat</span>
+                        </header>
+                        <div class="card cht grey darken-2 left row">
+                            <div class="col s2 chtIcon">
+                                <h3>
+                                    <i class="icon ion-chatbubbles white-text text-darken-4"></i>
+                                </h3>
+                            </div>
+                            <div class="col s10">
+                                I am finding it difficult to add a feature to my website
+                            </div>
+                        </div>
+                        <div class="card cht grey grey darken-2 right row">
+                            <div class="col s10">
+                                Search through Afrikal, there are so many friks for that
+                            </div>
+                            <div class="col s2 chtIcon">
+                                <h3>
+                                    <i class="icon ion-chatbubbles white-text text-darken-4"></i>
+                                </h3>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </header>
+                <div class="col s12 m4 l4">
+                    <div class="demo_chat_box card">
+                        <header class="purple white-text">
+                            <i class="icon ion-chatbubbles"></i>
+                            <span class="white-text">Afrikal Chat</span>
+                        </header>
+                        <div class="card cht grey darken-2 left row">
+                            <div class="col s2 chtIcon">
+                                <h3>
+                                    <i class="icon ion-chatbubbles white-text text-darken-4"></i>
+                                </h3>
+                            </div>
+                            <div class="col s10">
+                                I need a perfect Logo Design for my Company
+                            </div>
+                        </div>
+                        <div class="card cht grey grey darken-2 right row">
+                            <div class="col s10">
+                                Oh! Dear you have come to the right place. Welcome! Search for your next logo designer here
+                                <br>
+                            </div>
+                            <div class="col s2 chtIcon">
+                                <h3>
+                                    <i class="icon ion-chatbubbles white-text text-darken-4"></i>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m4 l4">
+                    <div class="demo_chat_box card">
+                        <header class="purple white-text">
+                            <i class="icon ion-chatbubbles"></i>
+                            <span class="white-text">Afrikal Chat</span>
+                        </header>
+                        <div class="card cht grey darken-2 left row">
+                            <div class="col s2 chtIcon">
+                                <h3>
+                                    <i class="icon ion-chatbubbles white-text text-darken-4"></i>
+                                </h3>
+                            </div>
+                            <div class="col s10">
+                                Hey Afrikal, I can tidy up a room with no stress and I enjoy doing it. <br>
+                                Can I create a frik for that?
+                            </div>
+                        </div>
+                        <div class="card cht grey grey darken-2 right row">
+                            <div class="col s10">
+                                Of course you can, Many people need such service
+                                <br>
+                                So create a frik for that
+                            </div>
+                            <div class="col s2 chtIcon">
+                                <h3>
+                                    <i class="icon ion-chatbubbles white-text text-darken-4"></i>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <script src="js/jquery.min.js"></script>
